[package]
name = "precompile-utils"
authors = ["AxiaStake"]
description = "Utils to write EVM precompiles."
edition = "2018"
version = "0.1.0"

[dependencies]
log = "0.4"
num_enum = { version = "0.5.3", default-features = false }
sha3 = { version = "0.9", default-features = false }

# Moonbeam
precompile-utils-macro = { path = "macro" }

# Axlib
codec = { git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", package = "axia-scale-codec", version = "2.3.1", default-features = false }
frame-support = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
frame-system = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
sp-core = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
sp-io = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
sp-std = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }

# Frontier
fp-evm = { git = "https://github.com/axia-tech/frontier", branch = "master", default-features = false }
pallet-evm = { git = "https://github.com/axia-tech/frontier", branch = "master", default-features = false }

# AXIA / XCM
xcm = { git = "https://github.com/axia-tech/axia", branch = "dev", default-features = false }

[dev-dependencies]
hex-literal = "0.3.1"

[features]
default = ["std"]
std = [
	"codec/std",
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-evm/std",
	"sp-core/std",
	"sp-io/std",
	"sp-std/std",
]
