[package]
name = "moonbeam-primitives-ext"
authors = ["AxiaStake"]
edition = "2018"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
repository = "https://github.com/AxiaStake/moonbeam/"
version = "0.1.0"

[dependencies]
ethereum-types = { git = "https://github.com/axia-tech/axia-common", branch = "master", version = "0.12.0", default-features = false }

# Moonbeam
evm-tracing-events = { path = "../rpc/evm-tracing-events", default-features = false }

# Axlib
codec = { git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", package = "axia-scale-codec", version = "2.3.1", default-features = false }
sp-externalities = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
sp-runtime-interface = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
sp-std = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"ethereum-types/std",
	"evm-tracing-events/std",
	"sp-externalities/std",
	"sp-runtime-interface/std",
	"sp-std/std",
]
