[package]
name = "xcm-primitives"
authors = ["AxiaStake"]
edition = "2018"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
repository = "https://github.com/AxiaStake/moonbeam/"
version = "0.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame-support = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
frame-system = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
hex = { version = "0.4", default-features = false }
log = "0.4"
axia-scale-codec = { git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", version = "2.3.1", default-features = false, features = [
	"derive",
] }
scale-info = { git = "https://github.com/axia-tech/scale-info", branch = "v1.0.0", version = "1.0.0", default-features = false, features = [
	"derive",
] }
serde = { version = "1.0.101", optional = true, default-features = false, features = [
	"derive",
] }
sha3 = { version = "0.8", default-features = false }
sp-runtime = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
sp-std = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }

xcm = { git = "https://github.com/axia-tech/axia", branch = "dev", default-features = false }
xcm-builder = { git = "https://github.com/axia-tech/axia", branch = "dev", default-features = false }
xcm-executor = { git = "https://github.com/axia-tech/axia", branch = "dev", default-features = false }

[features]
default = ["std"]
std = [
	"hex/std",
	"axia-scale-codec/std",
	"serde/std",
	"sha3/std",
	"sp-runtime/std",
	"sp-std/std",
	"xcm-builder/std",
	"xcm/std",
]
