[package]
name = "moonriver-runtime"
authors = ["AxiaStake"]
build = "build.rs"
description = "Moonriver Runtime"
edition = "2018"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
version = "0.8.4"

[dependencies]
log = "0.4"
rlp = { git = "https://github.com/axia-tech/axia-common", branch = "master", version = "0.5", optional = true, default-features = false }
serde = { version = "1.0.101", optional = true, default-features = false, features = [
	"derive",
] }
sha3 = { version = "0.8", optional = true, default-features = false }

# Moonbeam
account = { path = "../../primitives/account/", default-features = false }
moonbeam-core-primitives = { path = "../../core-primitives", default-features = false }
precompile-utils = { path = "../../precompiles/utils", default-features = false }
runtime-common = { path = "../common", default-features = false }

# Moonbeam pallets
pallet-author-mapping = { path = "../../pallets/author-mapping", default-features = false }
pallet-crowdloan-rewards = { git = "https://github.com/axia-tech/crowdloan-rewards", branch = "master", default-features = false }
pallet-ethereum-chain-id = { path = "../../pallets/ethereum-chain-id", default-features = false }
pallet-maintenance-mode = { path = "../../pallets/maintenance-mode", default-features = false }
pallet-migrations = { path = "../../pallets/migrations", default-features = false }
pallet-proxy-genesis-companion = { path = "../../pallets/proxy-genesis-companion", default-features = false }
allychain-staking = { path = "../../pallets/allychain-staking", default-features = false }

# Moonbeam precompiles
crowdloan-rewards-precompiles = { path = "../../precompiles/crowdloan-rewards", default-features = false }
allychain-staking-precompiles = { path = "../../precompiles/allychain-staking", default-features = false }

# Moonbeam tracing
evm-tracing-events = { path = "../../primitives/rpc/evm-tracing-events", optional = true, default-features = false }
moonbeam-evm-tracer = { path = "../evm_tracer", optional = true, default-features = false }
moonbeam-rpc-primitives-debug = { path = "../../primitives/rpc/debug", default-features = false }
moonbeam-rpc-primitives-txpool = { path = "../../primitives/rpc/txpool", default-features = false }

# Axlib
frame-executive = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
frame-support = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
frame-system = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
pallet-balances = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
pallet-collective = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
pallet-democracy = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
pallet-identity = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
pallet-proxy = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
pallet-randomness-collective-flip = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
pallet-scheduler = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
pallet-society = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
pallet-timestamp = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
pallet-transaction-payment = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
pallet-treasury = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
pallet-utility = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
axia-scale-codec = { git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", version = "2.3.1", default-features = false, features = [
	"derive",
	"max-encoded-len",
] }
scale-info = { git = "https://github.com/axia-tech/scale-info", branch = "v1.0.0", version = "1.0.0", default-features = false, features = [
	"derive",
] }
sp-api = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
sp-block-builder = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
sp-core = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
sp-inherents = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
sp-io = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
sp-offchain = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
sp-runtime = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
sp-session = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
sp-std = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
sp-transaction-pool = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
sp-version = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }

# Frontier
fp-evm = { git = "https://github.com/axia-tech/frontier", branch = "master", default-features = false }
fp-rpc = { git = "https://github.com/axia-tech/frontier", branch = "master", default-features = false }
fp-self-contained = { git = "https://github.com/axia-tech/frontier", branch = "master", default-features = false }
pallet-ethereum = { git = "https://github.com/axia-tech/frontier", branch = "master", default-features = false }
pallet-evm = { git = "https://github.com/axia-tech/frontier", branch = "master", default-features = false }
pallet-evm-precompile-blake2 = { git = "https://github.com/axia-tech/frontier", branch = "master", default-features = false }
pallet-evm-precompile-bn128 = { git = "https://github.com/axia-tech/frontier", branch = "master", default-features = false }
pallet-evm-precompile-dispatch = { git = "https://github.com/axia-tech/frontier", branch = "master", default-features = false }
pallet-evm-precompile-modexp = { git = "https://github.com/axia-tech/frontier", branch = "master", default-features = false }
pallet-evm-precompile-sha3fips = { git = "https://github.com/axia-tech/frontier", branch = "master", default-features = false }
pallet-evm-precompile-simple = { git = "https://github.com/axia-tech/frontier", branch = "master", default-features = false }

# Cumulus / Nimbus
cumulus-pallet-allychain-system = { git = "https://github.com/axia-tech/cumulus", branch = "master", default-features = false }
cumulus-primitives-core = { git = "https://github.com/axia-tech/cumulus", branch = "master", default-features = false }
cumulus-primitives-timestamp = { git = "https://github.com/axia-tech/cumulus", branch = "master", default-features = false }
nimbus-primitives = { git = "https://github.com/axia-tech/nimbus", branch = "master", default-features = false }
pallet-author-inherent = { git = "https://github.com/axia-tech/nimbus", branch = "master", default-features = false }
pallet-author-slot-filter = { git = "https://github.com/axia-tech/nimbus", branch = "master", default-features = false }
allychain-info = { git = "https://github.com/axia-tech/cumulus", branch = "master", default-features = false }

# AXIA / XCM

# Benchmarking
frame-benchmarking = { git = "https://github.com/axia-tech/axlib", branch = "dev", optional = true, default-features = false }
frame-system-benchmarking = { git = "https://github.com/axia-tech/axlib", branch = "dev", optional = true, default-features = false }
frame-try-runtime = { git = "https://github.com/axia-tech/axlib", branch = "dev", optional = true, default-features = false }

[dev-dependencies]
hex = "0.4"
rlp = { git = "https://github.com/axia-tech/axia-common", branch = "master", version = "0.5" }
sha3 = "0.9"

cumulus-primitives-allychain-inherent = { git = "https://github.com/axia-tech/cumulus", branch = "master", default-features = false }
cumulus-test-relay-sproof-builder = { git = "https://github.com/axia-tech/cumulus", branch = "master", default-features = false }

[build-dependencies]
axlib-wasm-builder = { git = "https://github.com/axia-tech/axlib", branch = "dev" }

[features]
default = ["std"]
std = [
	"account/std",
	"cumulus-pallet-allychain-system/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-timestamp/std",
	"evm-tracing-events/std",
	"fp-evm/std",
	"fp-rpc/std",
	"fp-self-contained/std",
	"frame-benchmarking/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"moonbeam-core-primitives/std",
	"moonbeam-evm-tracer/std",
	"moonbeam-rpc-primitives-debug/std",
	"moonbeam-rpc-primitives-txpool/std",
	"nimbus-primitives/std",
	"pallet-author-inherent/std",
	"pallet-author-mapping/std",
	"pallet-author-slot-filter/std",
	"pallet-balances/std",
	"pallet-collective/std",
	"pallet-crowdloan-rewards/std",
	"pallet-democracy/std",
	"pallet-ethereum-chain-id/std",
	"pallet-ethereum/std",
	"pallet-evm/std",
	"pallet-maintenance-mode/std",
	"pallet-migrations/std",
	"pallet-proxy-genesis-companion/std",
	"pallet-proxy/std",
	"pallet-randomness-collective-flip/std",
	"pallet-scheduler/std",
	"pallet-society/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-treasury/std",
	"pallet-utility/std",
	"allychain-info/std",
	"allychain-staking-precompiles/std",
	"allychain-staking/std",
	"axia-scale-codec/std",
	"precompile-utils/std",
	"runtime-common/std",
	"scale-info/std",
	"serde",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
]
evm-tracing = ["evm-tracing-events", "moonbeam-evm-tracer", "rlp", "sha3"]

# Will be enabled by the `wasm-builder` when building the runtime for WASM.
runtime-wasm = []

# A feature that should be enabled when the runtime should be build for on-chain
# deployment. This will disable stuff that shouldn't be part of the on-chain wasm
# to make it smaller like logging for example.
on-chain-release-build = ["sp-api/disable-logging"]

runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking",
	"frame-system/runtime-benchmarks",
	"pallet-author-mapping/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"pallet-crowdloan-rewards/runtime-benchmarks",
	"pallet-ethereum/runtime-benchmarks",
	"pallet-society/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"allychain-staking/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-executive/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime",
	"pallet-author-mapping/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-collective/try-runtime",
	#"pallet-crowdloan-rewards/try-runtime",
	"pallet-migrations/try-runtime",
	"pallet-society/try-runtime",
	"pallet-timestamp/try-runtime",
	"allychain-staking/try-runtime",
]
